# ai-governance-toolkit

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: RedTeamChart.tsx  layout.tsx  page.tsx
dashboard/data/: summary.json
docs/: architecture.md
examples/: model_spec.yaml  risk_answers.yaml
helm/ai-governance-toolkit/: Chart.yaml  values.yaml
helm/ai-governance-toolkit/templates/: deployment.yaml  service.yaml
src/aigovkit/: __init__.py  cli.py
src/aigovkit/api/: __init__.py  main.py
src/aigovkit/audit/: __init__.py  aggregator.py  schema.py
src/aigovkit/guardrails/: __init__.py  base.py  heuristic.py  orchestrator.py
src/aigovkit/modelcards/: __init__.py  generator.py
src/aigovkit/redteam/: __init__.py  prompts.py  runner.py  targets.py
src/aigovkit/risk/: __init__.py  assessor.py
tests/: test_audit_api_cli.py  test_guardrails_redteam.py  test_modelcards_risk.py
